Finished the authentication plugin

--- a/plugins/authentication/yubikey/language/en-GB/en-GB.plg_authentication_yubikey.ini
+++ b/plugins/authentication/yubikey/language/en-GB/en-GB.plg_authentication_yubikey.ini
@@ -1,5 +1,5 @@
 PLG_AUTHENTICATION_YUBIKEY="Authentication - YubiKey"
-PLG_AUTHENTICATION_YUBIKEY_XML_DESCRIPTION="Allows users to authenticate using their YubiKey hardware token"
+PLG_AUTHENTICATION_YUBIKEY_XML_DESCRIPTION="Allows users to authenticate using their YubiKey hardware token. You must also enable the User - YubiKey plugin."
 
 PLG_AUTHENTICATION_YUBIKEY_MASTERKEY_LABEL="Master key"
 PLG_AUTHENTICATION_YUBIKEY_MASTERKEY_DESC="The master YubiKey signature. Using this YubiKey will allow you to log in to any user account on your site."
@@ -9,3 +9,5 @@ PLG_AUTHENTICATION_YUBIKEY_CUSTOMURL_DESC="If left blank the plugin checks the Y
 PLG_AUTHENTICATION_YUBIKEY_ERR_BLANKPASSANDUSERNAME="You can't leave both the username and password blank"
 PLG_AUTHENTICATION_YUBIKEY_ERR_NOYUBIKEYOTP="No YubiKey OTP was found in the username or password submitted"
 PLG_AUTHENTICATION_YUBIKEY_ERR_INVALIDOTP="Invalid YubiKey OTP or unable to contact key server"
+PLG_AUTHENTICATION_YUBIKEY_ERR_USERNOTFOUND="This YubiKey does not correspond to any user"
+PLG_AUTHENTICATION_YUBIKEY_ERR_INVALIDUSER="This YubiKey does not correspond to the user specified"
