--- a/translations/plugins/twofactorauth/yubikeyplus/en-GB/en-GB.plg_twofactorauth_yubikeyplus.sys.ini
+++ b/translations/plugins/twofactorauth/yubikeyplus/en-GB/en-GB.plg_twofactorauth_yubikeyplus.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_TWOFACTORAUTH_YUBIKEYPLUS="Two Factor Authentication - YubiKey"
+PLG_TWOFACTORAUTH_YUBIKEYPLUS="Two Factor Authentication - YubiKey Plus"
 PLG_TWOFACTORAUTH_YUBIKEYPLUS_XML_DESCRIPTION="Allows users on your site to use two factor authentication using a YubiKey secure hardware token. Users need their own Yubikey available from http://www.yubico.com/.  To use two factor authentication users have to edit their user profile and enable two factor authentication."
