Completed the U2F management page
Finally, I managed to make my secondary PC dual boot to Ubuntu. Having a recent OpenSSL version allowed me to complete the registration / removal page for U2F keys.

The U2F key data is stored in user parameters since the otp field is too short to hold the full encrypted registrations array.

--- a/translations/plugins/twofactorauth/u2f/en-GB/en-GB.plg_twofactorauth_u2f.ini
+++ b/translations/plugins/twofactorauth/u2f/en-GB/en-GB.plg_twofactorauth_u2f.ini
@@ -19,6 +19,11 @@ PLG_TWOFACTORAUTH_U2F_ERROR_EXTENSION_TITLE="FIDO U2F requires a browser extensi
 PLG_TWOFACTORAUTH_U2F_ERROR_EXTENSION_TEXT="Support for FIDO U2F hardware tokens requires you to install the free of charge <a href='https://chrome.google.com/webstore/detail/fido-u2f-universal-2nd-fa/pfboblefjcgdjicmnffhdgionmgcdmne'>FIDO U2F (Universal 2nd Factor) extension</a> from the Chrome Web Store."
 
 PLG_TWOFACTORAUTH_U2F_ERR_NO_REGISTRATION_REQUEST="No U2F registration request was found in the session. The U2F key has not been registered."
+PLG_TWOFACTORAUTH_U2F_ERR_JS_OTHER="An error occurred while registering the U2F key but the browser did not provide additional information."
+PLG_TWOFACTORAUTH_U2F_ERR_JS_CANNOTPROCESS="The U2F key registration cannot be processed. Please make sure you are using a publicly accessible domain name for your site, not one defined locally e.g. in your hosts file, MAMP and so on."
+PLG_TWOFACTORAUTH_U2F_ERR_JS_CLIENTCONFIGNOTSUPPORTED="U2F key registration failed: the client configuration is not supported. Most likely your U2F key is not supported by your browser."
+PLG_TWOFACTORAUTH_U2F_ERR_JS_INELIGIBLE="The U2F key you tried to add is not eligible for registration. It is either already registered or it does not understand the registration request."
+PLG_TWOFACTORAUTH_U2F_ERR_JS_TIMEOUT="The U2F key timed out before the registration could be completed."
 
 PLG_TWOFACTORAUTH_U2F_INTRO="This feature allows you to use a compatible FIDO U2F (Universal 2nd Factor) secure hardware token for two factor authentication, e.g. a YubiKey U2F, YubiKey Neo, Plug-up FIDO U2F key etc. On top of your username and password you will also need to insert your U2F Key in your computer's USB port (and touch is blinking button if there is one). The process performed between your browser and the hardware token uses very strong cryptography, making it practically impossible to forge. This provides extra protection against hackers logging in to your account even if they were able to get hold of your password. You can link one or more U2F secure hardware tokens to your user account. You can use any one of them when logging in."
 PLG_TWOFACTORAUTH_U2F_RESET_HEAD="U2F Keys already linked to your user account"
