--- a/translations/plugins/twofactorauth/u2f/en-GB/en-GB.plg_twofactorauth_u2f.ini
+++ b/translations/plugins/twofactorauth/u2f/en-GB/en-GB.plg_twofactorauth_u2f.ini
@@ -36,4 +36,6 @@ PLG_TWOFACTORAUTH_U2F_REMOVE_BUTTON="Remove this U2F Key"
 PLG_TWOFACTORAUTH_U2F_ADD_BUTTON="Add another U2F Key"
 PLG_TWOFACTORAUTH_U2F_SECURITYCODE="Security Code"
 PLG_TWOFACTORAUTH_U2F_STEP1_HEAD="Add a U2F Key"
-PLG_TWOFACTORAUTH_U2F_STEP1_TEXT="Please insert your U2F key device in your computer's USB port. Click on the Register field below. If your device has a button it will start blinking and you need to touch it. Afterwards, please save your user profile."
+PLG_TWOFACTORAUTH_U2F_STEP1_TEXT="Please insert your U2F key device in your computer's USB port. Click on the Register button below. If your device has a button it will start blinking and you need to touch it."
+
+PLG_TWOFACTORAUTH_U2F_MESSAGE_TOUCHBUTTON="Please insert your U2F key device in your computer's USB port. If the device has a button and it's flashing, please touch it."
